- We are having fun with Makefiles...
- Updated the Donation file to talk about the PayPal address to make donating easier
  (hint hint.. ;)
- Added missing lines to include/setup.h.in for snprintf, vsnprintf, strlcpy, strlcat,
  and strlncat. Should fix #0001510 (for real this time).
- Ouch!! Fixed a severe bug which caused opers not being recognized on remote
  servers causing various problems... This was caused by a change 1-2 days ago.
  Reported by Rocko (#0001537).
- Fixed fdlist bug/warning if a local operator /oper'd up twice. Reported by
  DukePyrolator (#0001539).
- Changed version to RC1
*** RC1 release ***
- Fixed a problem regarding the new module system and deleting the tmp/ directory
  under Linux 2.2 (thanks to FunTeenChat for helping track this down)
- Updated /credits. Now includes everyone who has sent in donations, thanks
  to everyone!
- Fixed a bug in "unkickable users" (umode +q), they could still be kicked
  by non-netadmin ircops in some (many) cases, reported by Zell (#0001541).
- Removed reference to SVSTIME from help.conf (it's actually /tsctl svstime)
  (#0001540) reported by penna and DukePyrolator.
- Added HOOKTYPE_UMODE_CHANGE (sptr, oldflags, newflags) - this may 
  not be accurate as umode changes are done manually many places.
- Added HOOKTYPE_TOPIC (catches both remote and local TOPIC sets).
- Added a missing ; in the docs oper {} example, reported by Certus
- Fixed a bug with leaving out SJB64 in PROTOCTL resulting in strangeness
  (#0001545) reported by MagicalTux2
- Added [OLD?] flag in /module so you can easily spot old beta* modules.
- Modulized: samode, sajoin, sapart, kick, topic, invite, list
- Added HOOKTYPE_REHASH_COMPLETE to allow permanent modules to reload
  command overrides. (#0001553) reported by AngryWolf
- Modulized: time, svskill
- Modulized: sjoin, pass, userhost, ison, silence
- Modulized: knock, umode2, squit, protoctl
- Slightly changed how extcmodes handles access control